# watch

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
cad/: pcb_edge.dxf  pcb_edge.scad
hal/: Cargo.toml  memory.x
hal/src/: adc.rs  buzzer.rs  lcd.rs  lib.rs  rtc.rs  system.rs
hal/src/lcd/: digit.rs  mod.rs  segment.rs
hardware/: MSP430FR6972.kicad_sym  fp-lib-table  segmap.txt  sym-lib-table  watch.kicad_pcb  watch.kicad_pro  watch.kicad_sch  watch.kicad_sym
hardware/MSP430FR6972.pretty/: RGC0064B.kicad_mod  RGC0064B_NV.kicad_mod
hardware/watch.pretty/: BatteryTerminal.kicad_mod  Button.kicad_mod  Buzzer.kicad_mod  LCD.kicad_mod  MountingHole_1.2mm.kicad_mod
src/: button.rs  buttons.rs  buzzer.rs  main.c  main.rs  measurement.rs  rtc.rs
