[package]
name = "watch"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embedded-time = "0.12.1"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rtic = { version = "2.0.1", features = ["thumbv6-backend", "rtic-monotonics"] }
rtic-monotonics = { version = "1.5.0", features = ["cortex-m-systick"] }
stm32l0xx-hal = { git = "https://github.com/stm32-rs/stm32l0xx-hal.git", features = ["mcu-STM32L053C8Ux", "rt"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true 
incremental = false
opt-level = "s" 
overflow-checks = true 

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true 
incremental = false
opt-level = "s" 
overflow-checks = true 

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false 
incremental = false
lto = 'fat'
opt-level = "s" 
overflow-checks = false 

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false 
incremental = false
lto = 'fat'
opt-level = "s" 
overflow-checks = false 
