[package]
name = "watch-hal"
version = "0.1.0"
edition = "2021"
authors = ["Hayley Hughes <hayley@foxes.systems>"]
description = "A hardware abstraction library for watch"
repository = "https://github.com/hugglesfox/watch"
license = "GPL-2.0-or-later"

[dependencies]
cortex-m = "0.7.7"
paste = "1.0.14"
stm32l0 = { version = "0.15.1", features = ["stm32l0x3"] }

